--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@tabler/icons-react": "^3.20.0",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
