--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.3",
     "@tabler/icons-react": "^3.20.0",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
+    "leaflet": "^1.9.4",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.46",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.27.0"
   },
   "devDependencies": {
